retirer le fixed sur la nav car perturbe le collapse

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -13,25 +13,23 @@ ul, ol, li {
 
 .wrapper {
     display: flex;
+    height: 100%;
 }
 
 /*composant body*/
 
 main {
-    flex-grow: 5;
-    padding-left: 1rem;
+    flex-grow: 3;
 }
 
 /*le container est la class stylisant le plus grand parent dans chaque vue twig */
-main .container {
-    max-width: 70vw;
-    margin: 0 auto;
+ .container {
 }
 
 /*Navbar page*/
 .navbar {
     display: flex;
-    z-index: 10;
+    flex-grow: 1;
 }
 
 /*element décoratif ??*/
@@ -68,7 +66,7 @@ main .container {
     background: var(--bgprimary);
     padding: 2rem 1rem 0 2rem;
     box-shadow: 0 0 20px rgba(143, 143, 143, 0.5);
-    position: fixed;
+    position: relative;
 }
 
 .sidebar a,
